# Backtest_Suite

./: .gitignore  BACKTESTING_COVERAGE_IMPROVEMENT_REPORT.md  BEAT_BUYHOLD_SUMMARY.md  CLAUDE.md  CODESPACES_HTML_PREVIEW.md  COMMIT_READY.md  COMMIT_SUMMARY.md  COMPREHENSIVE_COVERAGE_REPORT.md  COMPREHENSIVE_FEATURE_TESTING_REPORT.md  COVERAGE_ANALYSIS_REPORT.md  COVERAGE_GAP_ANALYSIS.md  COVERAGE_IMPROVEMENT_REPORT.md  COVERAGE_OPTIMIZATION_REPORT.md  COVERAGE_QUICK_WINS_REPORT.md  COVERAGE_STATUS_NONML.md  CRITICAL_NONML_MODULES_ANALYSIS.md  END_TO_END_TEST_REPORT.md  FINAL_100_COVERAGE_ACHIEVEMENT_REPORT.md  FINAL_COMMIT_SOLUTION.md  FINAL_COVERAGE_REPORT_NONML.md  HOW_TO_PREVIEW_HTML.md  IMMEDIATE_COVERAGE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDICATORS_COVERAGE_REPORT.md  MISSING_LINES_ANALYSIS.md  MISSING_TEST_SCENARIOS.md  ML_INTEGRATION_SUMMARY.md  ML_TEST_SUMMARY.md  NONML_COVERAGE_PRIORITY_REPORT.md  PERFORMANCE_TESTING_SUMMARY.md  PERFORMANCE_VALIDATION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  README.md  README_REAL_DATA.md  SHELL_FIX_SUMMARY.md  TEST_COVERAGE_ROADMAP.md  TEST_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_ANALYSIS_COVERAGE_REPORT.md  VISUALIZATION_COVERAGE_REPORT.md  VISUALIZATION_COVERAGE_SUMMARY.md  (+71 more)
.claude/: HOOKS_UPDATE_SUMMARY.md  settings.json  settings.json.backup
.swarm/: memory.db-shm  memory.db-wal
config/: feature_config.yaml  ml_config.yaml  optimization_config.yaml  strategy_config.yaml
data/: AAPL.csv  AAPL_1D_2020-01-01_2024-01-01.csv  AAPL_1M_2020-01-01_2024-01-01.csv  AAPL_1W_2020-01-01_2024-01-01.csv  AAPL_daily.csv  GLD.csv  GLD_1D_2020-01-01_2024-01-01.csv  GLD_1M_2020-01-01_2024-01-01.csv  GLD_1W_2020-01-01_2024-01-01.csv  IWM.csv  JPM.csv  MSFT.csv  MSFT_1D_2020-01-01_2024-01-01.csv  MSFT_1M_2020-01-01_2024-01-01.csv  MSFT_1W_2020-01-01_2024-01-01.csv  QQQ.csv  QQQ_1D_2020-01-01_2024-01-01.csv  QQQ_1M_2020-01-01_2024-01-01.csv  QQQ_1W_2020-01-01_2024-01-01.csv  SPY.csv  SPY_1D_2020-01-01_2024-01-01.csv  SPY_1D_2023-01-01_2023-12-31.csv  SPY_1M_2020-01-01_2024-01-01.csv  SPY_1W_2020-01-01_2024-01-01.csv  SPY_1W_2023-01-01_2023-12-31.csv  TLT.csv  TSLA_1D_2020-01-01_2024-01-01.csv  (+4 more)
(+492 files in other folders)
